--- a/try/functional/nginx/nginx.conf.erb
+++ b/try/functional/nginx/nginx.conf.erb
@@ -18,13 +18,13 @@ http {
             root   html;
             index  index.html index.htm;
 
-            <%= display_key "locasberos_enabled", enabled %>
-            <%= display_key "cas_endpoint", endpoint %>
-            <%= display_key "cas_service", cas_service %>
-            <%= display_key "auth_type", auth_type %>
-            <%= display_key "auth_namej", auth_name %>
-            <%= display_key "auth_user_file", auth_user_file %>
-            <%= display_key "require", require_type %>
+            <%= display_key "locasberos_enabled", enabled, ";" %>
+            <%= display_key "cas_endpoint", endpoint, ";" %>
+            <%= display_key "cas_service", cas_service, ";" %>
+            <%= display_key "auth_type", auth_type, ";" %>
+            <%= display_key "auth_namej", auth_name, ";" %>
+            <%= display_key "auth_user_file", auth_user_file, ";" %>
+            <%= display_key "require", require_type, ";" %>
         }
     }
 }
