--- a/try/functional/nginx/nginx.conf.erb
+++ b/try/functional/nginx/nginx.conf.erb
@@ -18,7 +18,7 @@ http {
             root   html;
             index  index.html index.htm;
 
-            <%= display_key "locasberos_enabled", enabled, ";" %>
+            <%= display_key "locasberos_enabled", enabled.downcase, ";" %>
             <%= display_key "cas_endpoint", endpoint, ";" %>
             <%= display_key "cas_service", cas_service, ";" %>
             <%= display_key "auth_type", auth_type, ";" %>
