--- a/try/functional/nginx/nginx.conf.erb
+++ b/try/functional/nginx/nginx.conf.erb
@@ -21,10 +21,8 @@ http {
             <%= display_key "locasberos_enabled", enabled.downcase, ";" %>
             <%= display_key "cas_endpoint", endpoint, ";" %>
             <%= display_key "cas_service", cas_service, ";" %>
-            <%= display_key "auth_type", auth_type, ";" %>
-            <%= display_key "auth_namej", auth_name, ";" %>
+            <%= display_key "auth_name", auth_name, ";" %>
             <%= display_key "auth_user_file", auth_user_file, ";" %>
-            <%= display_key "require", require_type, ";" %>
         }
     }
 }
